if (NETWORK_BUILD_DEMO)
    add_subdirectory(1_virtual_network_interface)
    add_subdirectory(2_sockets)
    add_subdirectory(3_packets)
    add_subdirectory(4_async_poll_send_and_recv)
    add_subdirectory(tcp_demo)
    add_subdirectory(echo_server_demo)
    add_subdirectory(multicast_demo)
    add_subdirectory(udp_demo)
endif()
